# clip

./: .gitignore  README.md  download.sh  pyproject.toml  requirements.txt
clip/: clip.py  clip_decoder.py  clip_decoder_train.py  clip_train.py  data.py
cross-attn/: data.py  exp.ipynb  model.py  train.py  transformer.py
src/: model.py  train.py  transformer.py
